--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -310,18 +310,18 @@ move_to_previous: False
 #heater_temp: 50.0
 
 
-#[controller_fan controller_fan]
+[controller_fan controller_fan]
 ##  Controller fan - FAN2
-#pin: PD12
-#kick_start_time: 0.5
-#heater: heater_bed
+pin: PD12
+kick_start_time: 0.5
+heater: heater_bed
 
 #[heater_fan exhaust_fan]
 ##  Exhaust fan - FAN3
 #pin: PD13
 #max_power: 1.0
 #shutdown_speed: 0.0
-#kick_start_time: 5.0
+##kick_start_time: 5.0
 #heater: heater_bed
 #heater_temp: 60
 #fan_speed: 1.0
@@ -510,7 +510,7 @@ gcode:
     G1 Z20 F3000                   ; move nozzle up 20mm
     G90                            ; absolute positioning
     # G28 X Y            ; park nozzle at rear
-    G0 X150 Y200    ;park nozzle near the front *makes for better xy homing on next print
+    G0 X150 Y275  ;park nozzle near the front *makes for better xy homing on next print
     M117 Finished!                 ; display message
     Set_LED led=my_neopixel RED=0 Green=0 Blue=0 Transmit=1
     STATUS_OFF
@@ -558,7 +558,7 @@ gcode:
 #*# [stepper_z]
 #*#
 #*# [probe]
-#*# z_offset = -0.693
+#*# z_offset = -0.733
 #*#
 #*# [bed_mesh default]
 #*# version = 1
